Agregada la funcinalidad de las rutas de Angula para cambiar entre componentes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,18 @@
-<h1>holas</h1>
+<div class="row container mt-4">
+
+  <div class="col-3">
+    <h2>Search options</h2>
+    <hr>
+    <ul class="list-group">
+      <li class="list-group-item">Search by country</li>
+      <li class="list-group-item">Search by region</li>
+      <li class="list-group-item">Search by capita</li>
+    </ul>
+  </div>
+
+  <div class="col-9">
+    <!-- componenete de las rutas -->
+    <router-outlet></router-outlet>
+  </div>
+
+</div>
