--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,18 @@
     <h2>Search options</h2>
     <hr>
     <ul class="list-group">
-      <li class="list-group-item">Search by country</li>
-      <li class="list-group-item">Search by region</li>
-      <li class="list-group-item">Search by capita</li>
+      <!-- cunado se utilizan las rutas el modulo incorpora la funcionalidad de los "routerLink" para poder cambiar entre las mismas 
+           - el atributo "routerLinkActive" permite especificar una clase que se le aplica al elemento al encontrarse en esa ruta
+           - el atributo "[routerLinkActiveOptions]='{exact:true}'" especifica que cuando se encuentre en la ruta principal se elimine la clase active
+           - el atributo "[routerLinkActiveOptions]='{exact:true}'" solo se especifica cuando el path es un string vacio, caso contrario se omite
+      -->
+      <li routerLink=""  
+          routerLinkActive="active" 
+          [routerLinkActiveOptions]="{exact:true}"
+          class="list-group-item" 
+      >Search by country</li>
+      <li routerLink="region"  class="list-group-item" routerLinkActive="active">Search by region</li>
+      <li routerLink="capital"  class="list-group-item" routerLinkActive="active">Search by capital</li>
     </ul>
   </div>
 
