--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="row container mt-4">
+<div class="row w-100 mt-4">
 
-  <app-sidebar class="col-3"></app-sidebar>
+  <app-sidebar class="col-3 px-4"></app-sidebar>
 
   <div class="col-9">
     <!-- componenete de las rutas -->
