Agregada la funcionalidad de ejecutar una funcion al dejar de escribir en el formulario (debounce) utilizando el observable 'object' y sus metodos suscribe y pipe y anexado el debounceTime para crear el retraso de respuesta, todos provenientes de la libreria 'rxjs'

--- a/src/app/country/components/form-search-country/form-search-country.component.html
+++ b/src/app/country/components/form-search-country/form-search-country.component.html
@@ -1,7 +1,13 @@
 <form action="#" class="row gap-2" autocomplete="off" (ngSubmit)="search();">
   <div class="col-md-8">
     <div class="form-floating">
-      <input type="text" class="form-control" placeholder="keywords..." name="argument" id="argument" [(ngModel)]="argument">
+      <input type="text" 
+        class="form-control" 
+        placeholder="keywords..." 
+        name="argument" id="argument" 
+        [(ngModel)]="argument"
+        (input)="debounceSearch($event);"
+      >
       <label for="argument">keywords</label>
     </div>
   </div>
