--- a/src/app/country/pages/by-country/by-country.component.html
+++ b/src/app/country/pages/by-country/by-country.component.html
@@ -3,7 +3,8 @@
 
 <!-- fomulario para realizar las busquedas -->
 <!-- recibimos el evento enviando desde el formulario "onSearch" y le pasamos el evento que contiene el argumento de texto -->
-<app-form-search-country (onSearch)="search($event);"></app-form-search-country>
+<!-- recibimos el evento enviando desde el formulario "onBounce" y le pasamos el argumento que este trae a la funcion a ejecutar -->
+<app-form-search-country (onSearch)="search($event);" (onDebounce)="sugge($event);"></app-form-search-country>
 
 <hr>
 
