Agregado el @input para recibir el nombre del placeholder del formulario

--- a/src/app/country/components/form-search-country/form-search-country.component.html
+++ b/src/app/country/components/form-search-country/form-search-country.component.html
@@ -3,12 +3,12 @@
     <div class="form-floating">
       <input type="text" 
         class="form-control" 
-        placeholder="keywords..." 
+        [placeholder]="placeholerSearch" 
         name="argument" id="argument" 
         [(ngModel)]="argument"
         (input)="debounceSearch($event);"
       >
-      <label for="argument">keywords</label>
+      <label for="argument">{{placeholerSearch}}</label>
     </div>
   </div>
   <div class="col-md">
