--- a/src/app/country/pages/by-capital/by-capital.component.html
+++ b/src/app/country/pages/by-capital/by-capital.component.html
@@ -4,7 +4,7 @@
 <!-- fomulario para realizar las busquedas -->
 <!-- recibimos el evento enviando desde el formulario "onSearch" y le pasamos el evento que contiene el argumento de texto -->
 <!-- recibimos el evento enviando desde el formulario "onBounce" y le pasamos el argumento que este trae a la funcion a ejecutar -->
-<app-form-search-country (onSearch)="search($event);" (onDebounce)="sugge($event);"></app-form-search-country>
+<app-form-search-country placeholderSearch="Capital name" (onSearch)="search($event);" (onDebounce)="sugge($event);"></app-form-search-country>
 
 <hr>
 
