--- a/src/app/country/pages/show-country/show-country.component.html
+++ b/src/app/country/pages/show-country/show-country.component.html
@@ -1,1 +1,10 @@
-<p>show-country works!</p>
+<!-- <div class="alert alert-info" *ngIf="!countryData; else showData">
+  Estamos trabjando para mostrarle la información
+</div>
+
+<ng-template #showData>
+  <div class="row">
+    <img [src]="countryData.flags" alt="{{countryData.name}}-flag">
+    <h1>{{countryData.name.common}}</h1>
+  </div>
+</ng-template> -->
