--- a/src/app/country/pages/show-country/show-country.component.html
+++ b/src/app/country/pages/show-country/show-country.component.html
@@ -1,10 +1,124 @@
-<!-- <div class="alert alert-info" *ngIf="!countryData; else showData">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+<div class="alert alert-info" *ngIf="!countryData; else showData">
   Estamos trabjando para mostrarle la información
 </div>
 
 <ng-template #showData>
   <div class="row">
-    <img [src]="countryData.flags" alt="{{countryData.name}}-flag">
-    <h1>{{countryData.name.common}}</h1>
+    <div class="col-md-5 d-flex justify-content-center align-items-center">
+      <img [src]="countryData.flags.png" alt="{{countryData.name}}-flag" class="shadow img-flag-large img-fluid">
+    </div>
+    <div class="col-md-7 d-flex align-items-end flex-wrap">
+      <h1 class="d-block fs-2"><span class="text-decoration-underline">{{countryData.name.common}}</span><br>{{countryData.name.official}}</h1>
+      <p class="fst-italic fs-4"><span class="fw-bold">Region:</span>{{countryData.region}}</p>
+    </div>
   </div>
-</ng-template> -->
+
+  <hr>
+
+  <div class="w-100 p-3 row">
+
+    <div class="col-lg-7">
+      <!-- info -->
+      <div class="row border-4 w-100  fs-5">
+        <div class="col-sm-3">
+          <p class="fw-bold">Name:</p>
+        </div>
+        <div class="col-sm-9">
+          <p>{{countryData.name.common}}</p>
+        </div>
+      </div>
+      <!-- info -->
+      <div class="row border-4 w-100  fs-5">
+        <div class="col-sm-3">
+          <p class="fw-bold">Oficial name:</p>
+        </div>
+        <div class="col-sm-9">
+          <p>{{countryData.name.official}}</p>
+        </div>
+      </div>
+      <!-- info -->
+      <div class="row border-4 w-100  fs-5">
+        <div class="col-sm-3">
+          <p class="fw-bold">Capital:</p>
+        </div>
+        <div class="col-sm-9">
+          <p>{{countryData.capital[0]}}</p>
+        </div>
+      </div>
+      <!-- info -->
+      <div class="row border-4 w-100  fs-5">
+        <div class="col-sm-3">
+          <p class="fw-bold">Code:</p>
+        </div>
+        <div class="col-sm-9">
+          <p>{{countryData.cca2}}</p>
+        </div>
+      </div>
+      <!-- info -->
+      <div class="row border-4 w-100  fs-5">
+        <div class="col-sm-3">
+          <p class="fw-bold">Time zone:</p>
+        </div>
+        <div class="col-sm-9">
+          <p><span *ngFor="let item of countryData.timezones">{{item}} </span></p>
+        </div>
+      </div>
+      <!-- info -->
+      <div class="row border-4 w-100  fs-5">
+        <div class="col-sm-3">
+          <p class="fw-bold">Area code:</p>
+        </div>
+        <div class="col-sm-9">
+          <p>{{countryData.idd.root + countryData.idd.suffixes}}</p>
+        </div>
+      </div>
+      <!-- info -->
+      <div class="row border-4 w-100  fs-5">
+        <div class="col-sm-3">
+          <p class="fw-bold">Region:</p>
+        </div>
+        <div class="col-sm-9">
+          <p>{{countryData.region}}</p>
+        </div>
+      </div>
+      <!-- info -->
+      <div class="row border-4 w-100  fs-5">
+        <div class="col-sm-3">
+          <p class="fw-bold">Subregion:</p>
+        </div>
+        <div class="col-sm-9">
+          <p>{{countryData.subregion}}</p>
+        </div>
+      </div>
+      <!-- info -->
+      <div class="row border-4 w-100  fs-5">
+        <div class="col-sm-3">
+          <p class="fw-bold">Area:</p>
+        </div>
+        <div class="col-sm-9">
+          <p>{{countryData.area | number}}KM</p>
+        </div>
+      </div>
+      <!-- info -->
+      <div class="row border-4 w-100  fs-5">
+        <div class="col-sm-3">
+          <p class="fw-bold">Borders:</p>
+        </div>
+        <div class="col-sm-9">
+          <p>
+            <span *ngFor="let item of countryData.borders; let i = index;">
+              {{item}} <span *ngIf="countryData.borders.length < i">,</span></span>
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-lg-5 d-flex justify-content-center flex-column">
+      <p class="fs-4 w-100 fw-bold fst-italic">Coat of arms</p>
+      <img [src]="countryData.coatOfArms.png" alt="coad of arms logo" class="img-flag-large">
+    </div>
+
+  </div>
+
+</ng-template>
