--- a/src/app/country/pages/by-country/by-country.component.html
+++ b/src/app/country/pages/by-country/by-country.component.html
@@ -1,3 +1,4 @@
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 <h2>Search by country</h2>
 <hr>
 
@@ -5,6 +6,19 @@
 <!-- recibimos el evento enviando desde el formulario "onSearch" y le pasamos el evento que contiene el argumento de texto -->
 <!-- recibimos el evento enviando desde el formulario "onBounce" y le pasamos el argumento que este trae a la funcion a ejecutar -->
 <app-form-search-country placeholderSearch="Country name" (onSearch)="search($event);" (onDebounce)="sugge($event);"></app-form-search-country>
+
+<ul class="list-group row px-2">
+  <li 
+    class="list-group-item list-group-item-action pointer-event fw-bold text-info text-decoration-underline" 
+    *ngFor="let item of countrySugge;"
+    (click)="search(item.name.common);"
+  >{{item.name.common | titlecase}}
+    <a href="#" 
+      [routerLink]="['/showCountry',item.cca2]"
+      class="btn btn-success btn-sm d-inline-block mx-1"
+    >Show all info</a>
+  </li>
+</ul>
 
 <hr>
 
